[project]
name = "speedrift-lane-sdk"
version = "0.1.0"
description = "Shared workgraph helpers and lane contract types for Speedrift drift lanes"
requires-python = ">=3.10"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speedrift_lane_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
